initial game file outlines

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 </head>
 
 <body>
+    <canvas id="game-area" width="500" height="250" style="border:2px dotted #000000;">
+    The Game Area rendered with HTML5 Canvas. Please try a more recent browser to play game!
+    </canvas>
 
 </body>
 
